--- a/YunSeongWu_cpp/yunm_ch1/yunm_ch1/yunm_ch1.vcxproj
+++ b/YunSeongWu_cpp/yunm_ch1/yunm_ch1/yunm_ch1.vcxproj
@@ -140,7 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="01-1.cpp" />
+    <ClCompile Include="01-2.cpp" />
+    <ClCompile Include="01-3.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="prolist.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
