--- a/YunSeongWu_cpp/yunm_ch1/yunm_ch1/yunm_ch1.vcxproj.filters
+++ b/YunSeongWu_cpp/yunm_ch1/yunm_ch1/yunm_ch1.vcxproj.filters
@@ -21,5 +21,16 @@
     <ClCompile Include="01-1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="01-2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="01-3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="prolist.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
