--- a/YunSeongWu_cpp/yunm_ch3ch4/yunm_ch3ch4/yunm_ch3ch4.vcxproj.filters
+++ b/YunSeongWu_cpp/yunm_ch3ch4/yunm_ch3ch4/yunm_ch3ch4.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClCompile Include="03-2-2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04-1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="04-2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="04-3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="prolist.h">
