--- a/YunSeongWu_cpp/yunm_ch3ch4/yunm_ch3ch4/yunm_ch3ch4.vcxproj.filters
+++ b/YunSeongWu_cpp/yunm_ch3ch4/yunm_ch3ch4/yunm_ch3ch4.vcxproj.filters
@@ -33,7 +33,10 @@
     <ClCompile Include="04-2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="04-3.cpp">
+    <ClCompile Include="04-3-1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="04-3-2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
