--- a/YunSeongWu_cpp/yunm_ch10ch11/yunm_ch10ch11/yunm_ch10ch11.vcxproj
+++ b/YunSeongWu_cpp/yunm_ch10ch11/yunm_ch10ch11/yunm_ch10ch11.vcxproj
@@ -142,7 +142,8 @@
     <ClCompile Include="10-1.cpp" />
     <ClCompile Include="10-2.cpp" />
     <ClCompile Include="10-3.cpp" />
-    <ClCompile Include="11-1.cpp" />
+    <ClCompile Include="11-1-2.cpp" />
+    <ClCompile Include="11-1-1.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
