--- a/YunSeongWu_cpp/yunm_ch10ch11/yunm_ch10ch11/yunm_ch10ch11.vcxproj.filters
+++ b/YunSeongWu_cpp/yunm_ch10ch11/yunm_ch10ch11/yunm_ch10ch11.vcxproj.filters
@@ -27,7 +27,10 @@
     <ClCompile Include="10-3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="11-1.cpp">
+    <ClCompile Include="11-1-2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="11-1-1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
